# mm-hf-compare

./: .gitignore  README.md  pyproject.toml
src/mm_hf_compare/models/: paligemma.py
tests/: test_doc.py  test_segment.py
tests/fixtures/: fixtures.toml  fixtures.yaml  get_em.sh  get_fixtures.py  torch_vae_mask.py
tests/helpers/: torch_vae_mask.py  vae_mask.py
