
[project]
    name = "mm-hf-compare"
    version = "0.0.0"
    description = "compare mm"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    dependencies = []
    requires-python = ">=3.11"
    readme = "README.md"

[build-system]
    requires = ["pdm-backend"]
    build-backend = "pdm.backend"

[tool.pdm]
    distribution = true

[tool.ruff]
    line-length = 120
